--- a/app/static/css/ui.css
+++ b/app/static/css/ui.css
@@ -76,6 +76,25 @@
       @media (min-width: 960px) {
         main {
           grid-template-columns: 360px 1fr;
+          grid-template-rows: auto auto;
+        }
+
+        /* First card - top left */
+        main>section:nth-child(1) {
+          grid-column: 1;
+          grid-row: 1;
+        }
+
+        /* Second card (player/results) - right column, spans both rows */
+        main>section:nth-child(2) {
+          grid-column: 2;
+          grid-row: 1 / 3;
+        }
+
+        /* Third card (auto-recommend) - bottom left */
+        main>section:nth-child(3) {
+          grid-column: 1;
+          grid-row: 2;
         }
       }
 
